<resources>
    <string name="app_name">MyEvosCloneApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tashkent">Toshkent</string>
    <string name="fergana">Farg\'ona</string>
    <string name="qirquli">Qirquli</string>
    <string name="qashqadarya">Qashqadaryo</string>
    <string name="andijan">Andijon</string>
    <string name="quqan">Qo\'qon</string>
    <string name="namangan">Namangan</string>
    <string name="samarkand">Samarqand</string>
    <string name="bnv_main">Asosiy</string>
    <string name="bnv_favourite">Tanlangan</string>
    <string name="bnv_food_menu">Menu</string>
    <string name="bnv_restaurants">Restoranlar</string>
    <string name="bnv_profile">Profil</string>
</resources>