<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main"
        android:icon="@drawable/ic_home"
        android:title="@string/bnv_main" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_heart"
        android:title="@string/bnv_favourite" />

    <item
        android:id="@+id/food_menu"
        android:icon="@drawable/ic_food_menu"
        android:title="@string/bnv_food_menu" />


    <item
        android:id="@+id/restaurants"
        android:icon="@drawable/ic_location"
        android:title="@string/bnv_restaurants" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/bnv_profile" />
</menu>