<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.screens.intro.SelectProvinceScreen">

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/img_foods_lang_screen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:background="@drawable/progress_bg"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:src="@drawable/back_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/evos_logo"
        app:layout_constraintBottom_toBottomOf="@id/topImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImage" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="Viloyatingizni tanlang"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/textVersion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTashkent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/tashkent"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFergona"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/fergana"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnQirquli"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/qirquli"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnQashqadarya"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/qashqadarya"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAndijan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/andijan"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnQuqan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/quqan"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNamangan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/namangan"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSamarkand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_weight="1"
                    android:background="@drawable/text_button_bg"
                    android:paddingVertical="16dp"
                    android:text="@string/samarkand"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="Evos v 1.0.31"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@drawable/progress_bg"
        android:padding="16dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>